SPLICE-888 Removing custom Predicate Wrapper, predicate interaction inside serde, and lazy dvd implementation.  This commit is a blocker for moving to Tungsten.